chore: fix cve